# app-XRM-launcher-ffmpeg

./: CMakeLists.txt  Makefile  README.md  parser.cpp  parser.h  sources.txt  worker.cpp
describe_job/: describe_job.json  describe_job_8.json  describe_job_h264TOhevc_transcodeOnly_1080p60.json  describe_job_h264_1080p30to720p30.json  describe_job_h264_1080p60to720p60.json  describe_job_h264_540p30to480p30.json  describe_job_h264_720p30to540p30.json  describe_job_h264_720p60to540p60.json  describe_job_h264_decodeOnly_720p60.json  describe_job_h264_decode_only.json  describe_job_h264_decode_scale.json  describe_job_h264_decoder.json  describe_job_h264_encode_only.json  describe_job_h264_transcodeOnly.json  describe_job_h264_transcodeOnly_1080p30.json  describe_job_h264_transcodeOnly_1080p60.json  describe_job_h264_transcodeOnly_1440p30.json  describe_job_h264_transcodeOnly_1440p60.json  describe_job_h264_transcodeOnly_2160p30.json  describe_job_h264_transcodeOnly_2160p60.json  describe_job_h264_transcodeOnly_540p30.json  describe_job_h264_transcodeOnly_720p30.json  describe_job_h264_transcodeOnly_720p60.json  describe_job_hevcTOh264_transcodeOnly_1080p60.json  describe_job_la.json  describe_job_mixrate.json  describe_job_mixrate_8.json  describe_job_scale_encode.json  testjob_4k_2dev.json
run_params/: Run_1080p30_h264_lowLatencyTranscode_null.txt  Run_1080p30_h264_normLatencyTranscode_null.txt  Run_1080p30to720p30_h264_lowLatencyTranscode_null.txt  Run_1080p60_h264TOhevc_normLatencyTranscode_null.txt  Run_1080p60_h264_lowLatencyTranscode_null.txt  Run_1080p60_h264_normLatencyTranscode_null.txt  Run_1080p60to720p60_h264_lowLatencranscode_null.txt  Run_1440p30_h264_lowLatencyTranscode_null.txt  Run_1440p60_h264_lowLatencyTranscode_null.txt  Run_2160p30_h264_lowLatencyTranscode_null.txt  Run_2160p60_h264_lowLatencyTranscode_null.txt  Run_540p30_h264_lowLatencyTranscode_null.txt  Run_540p30_h264_normLatencyTranscode_null.txt  Run_540p30to480p30_h264_lowLatenctranscode_null.txt  Run_720p30_h264_lowLatencyTranscode_null.txt  Run_720p30_h264_normLatencyTranscode_null.txt  Run_720p30to540p30_h264_lowLatencyTranscode_null.txt  Run_720p60_h264_lowLatencyTranscode_null.txt  Run_720p60_h264_normLatencyTranscode_null.txt  Run_720p60to540p60_h264_lowLatencyTranscode_null.txt  Run_ABR_2dev_null.txt  Run_ABR_h264_lowLatencyTranscode_mr_null.txt  Run_ABR_h264_normLatencyTranscode_mr_null.txt  Run_h264decode_only.txt  Run_h264decode_scale.txt  Run_scale_h264encode.txt
vvas_only_describe_job/: describe_job_h264_decode_scale.json
vvas_run_params/: Run_1080p30_h264_lowLatencyTranscode_null.txt  Run_1080p30_h264_normLatencyTranscode_null.txt  Run_1080p30_h265_lowLatencyTranscode_null.txt  Run_1080p30_h265_normLatencyTranscode_null.txt  Run_1080p30to720p30_h264_lowLatencyTranscode_null.txt  Run_1080p30to720p30_h265_lowLatencyTranscode_null.txt  Run_1080p60_ABR_h264_lowLatencyTranscode_mr_null.txt  Run_1080p60_ABR_h264_normLatencyTranscode_mr_null.txt  Run_1080p60_ABR_h265_lowLatencyTranscode_mr_null.txt  Run_1080p60_ABR_h265_normLatencyTranscode_mr_null.txt  Run_1080p60_h264TOhevc_normLatencyTranscode_null.txt  Run_1080p60_h264_lowLatencyTranscode_null.txt  Run_1080p60_h264_normLatencyTranscode_null.txt  Run_1080p60_h264decode_only.txt  Run_1080p60_h264decode_scale.txt  Run_1080p60_h265TOhevc_normLatencyTranscode_null.txt  Run_1080p60_h265_lowLatencyTranscode_null.txt  Run_1080p60_h265_normLatencyTranscode_null.txt  Run_1080p60_h265decode_only.txt  Run_1080p60_h265decode_scale.txt  Run_1080p60_scale_h264encode.txt  Run_1080p60_scale_h265encode.txt  Run_1080p60to720p60_h264_lowLatencranscode_null.txt  Run_1080p60to720p60_h265_lowLatencranscode_null.txt  Run_1440p30_h264_lowLatencyTranscode_null.txt  Run_1440p30_h265_lowLatencyTranscode_null.txt  Run_1440p60_h264_lowLatencyTranscode_null.txt  Run_1440p60_h265_lowLatencyTranscode_null.txt  Run_2160p30_h264_lowLatencyTranscode_null.txt  Run_2160p30_h265_lowLatencyTranscode_null.txt  Run_2160p60_ABR_2dev_null.txt  Run_2160p60_h264_lowLatencyTranscode_null.txt  Run_2160p60_h265_lowLatencyTranscode_null.txt  Run_540p30_h264_lowLatencyTranscode_null.txt  Run_540p30_h264_normLatencyTranscode_null.txt  Run_540p30_h265_lowLatencyTranscode_null.txt  Run_540p30_h265_normLatencyTranscode_null.txt  Run_540p30to480p30_h264_lowLatenctranscode_null.txt  Run_540p30to480p30_h265_lowLatenctranscode_null.txt  Run_720p30_h264_lowLatencyTranscode_null.txt  (+11 more)
